# cloud-native-reboot

./: README.md  mkdocs.yml  pyproject.toml
chapter1-create-legacy-app/: galactic-gamers-cf.yaml
chapter1-create-legacy-app/legacy-express-server/: .env-template  index.js  package-lock.json  package.json
chapter1-create-legacy-app/legacy-express-server/db-upgrade/: apply-schema.sh  init.sql
