[tool.poetry]
name = "cloud-mative-reboot"
version = "0.1.1"
description = "Rebbot your code"
authors = ["Efi MK <efi.merdler@gmail.com>"]
license = "Apache"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.2"
pillow = "^9.5.0"
cairosvg = "^2.7.0"


[tool.poetry.group.dev.dependencies]
boto3 = "^1.26.165"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"